# Tecnic-Bot

./: boto.py  errors.py  fun.py  main.py  mod.py  music.py  pyproject.toml
